Cambiar Color de botones al regresarme de crear, editar y agregar

--- a/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
@@ -1,16 +1,22 @@
-    <!-- ######## VIEW US44 ######## -->
+<!-- ######## VIEW US44 ######## -->
 
 
 {% extends 'dashboard/base.html' %}
 {% load staticfiles %}
 {% block content %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 
-   <div class="row">
+    <div class="row">
         <div class="col text-center m-3">
-                <h1>Crear Unidad</h1>
+            <h1>Crear Unidad</h1>
         </div>
     </div>
     <div class="container-fluid">
@@ -30,10 +36,16 @@
                                 {{ form.as_p }}
                                 <div class="row">
                                     <div class="col-md-2">
-                                        <button class="btn btn-danger" type="button" data-toggle="modal" data-target="#modalCancel">Cancelar</button>
+                                        <button class="btn btn-danger" type="button" data-toggle="modal"
+                                                data-target="#modalCancel">Cancelar
+                                        </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <a><button class="btn btn-success waves-effect waves-light" type="submit">Guardar</button></a>
+                                        <a>
+                                            <button class="btn btn-success waves-effect waves-light" type="submit">
+                                                Guardar
+                                            </button>
+                                        </a>
                                     </div>
                                 </div>
                             </form>
@@ -44,38 +56,38 @@
         </div>
 
         {% if status == "SAVED" %}
-        <div class="modal" id="modalSaved" tabindex="-1" role="dialog">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-body">
-                <p>Se ha creado la unidad {{ ambulancia_name }}</p>
-              </div>
-              <div class="modal-footer">
-                <a href="/ambulancia/ver/" class="btn btn-success">Aceptar</a>
-              </div>
+            <div class="modal" id="modalSaved" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <p>Se ha creado la unidad {{ ambulancia_name }}</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="/ambulancia/ver/" class="btn btn-success">Aceptar</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <script>
-            $("#modalSaved").modal({
-                backdrop: "static",
-                keyboard: false
-            });
-        </script>
+            <script>
+                $("#modalSaved").modal({
+                    backdrop: "static",
+                    keyboard: false
+                });
+            </script>
         {% endif %}
 
         <div class="modal" id="modalCancel" tabindex="-1" role="dialog">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-body">
-                <p>¿Desea salir sin guardar los cambios?</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
-                  <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-danger    ">Salir sin guardar</a>
-              </div>
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <p>¿Desea salir sin guardar los cambios?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
+                        <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-primary">Salir sin guardar</a>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
     </div>
 
