--- a/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
@@ -38,7 +38,9 @@
                                         </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
+                                        <button class="btn btn-success waves-effect waves-light" type="submit">De
+                                            acuerdo
+                                        </button>
                                     </div>
                                 </div>
                             </form>
@@ -54,8 +56,8 @@
                         <p>Si sales ahora no se guardarán los cambios de la unidad</p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar editando</button>
-                        <a href="/ambulancia/ver/" class="btn btn-danger">Salir sin guardar</a>
+                        <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
+                        <a href="/ambulancia/ver/" class="btn btn-primary">Salir sin guardar</a>
                     </div>
                 </div>
             </div>
