--- a/Vostok/inventario/templates/inventario/agregar_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/agregar_material_inventario.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="modal-footer">
                         <a href="{% url 'inventario:material_inventario' id_inventario %}">
-                            <button class="btn btn-danger">Salir sin guardar</button>
+                            <button class="btn btn-primary">Salir sin guardar</button>
                         </a>
                         <a href="{% url 'inventario:material_inventario' id_inventario %}">
                             <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando
