--- a/Vostok/inventario/templates/inventario/editar_inventario.html
+++ b/Vostok/inventario/templates/inventario/editar_inventario.html
@@ -54,8 +54,9 @@
                         <p>Si sales ahora no se guardarán los cambios en el equipo</p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar editando</button>
-                        <a href="/inventario/ver/" class="btn btn-danger">Salir sin guardar</a>
+                        <a href="/inventario/ver/" class="btn btn-primary">Salir sin guardar</a>
+                        <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
+
                     </div>
                 </div>
             </div>
