--- a/Vostok/material/templates/material/crear_material.html
+++ b/Vostok/material/templates/material/crear_material.html
@@ -79,7 +79,7 @@
                         <p>Si sales ahora no se guardará el material nuevo</p>
                     </div>
                     <div class="modal-footer">
-                        <a href="/material/ver/" class="btn btn-danger">Salir sin guardar</a>
+                        <a href="/material/ver/" class="btn btn-primary">Salir sin guardar</a>
                         <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
 
                     </div>
