--- a/Vostok/inventario/templates/inventario/crear_inventario.html
+++ b/Vostok/inventario/templates/inventario/crear_inventario.html
@@ -99,7 +99,7 @@
                         <p>Si sales ahora no se guardará el equipo nuevo</p>
                     </div>
                     <div class="modal-footer">
-                        <a href="/inventario/ver/" class="btn btn-danger">Salir sin guardar</a>
+                        <a href="/inventario/ver/" class="btn btn-primary">Salir sin guardar</a>
                         <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
 
                     </div>
