--- a/Vostok/material/templates/material/editar_material.html
+++ b/Vostok/material/templates/material/editar_material.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
-                        <a href="{%url 'material:ver_material' %}" class="btn btn-danger">Salir sin guardar</a>
+                        <a href="{%url 'material:ver_material' %}" class="btn btn-primary">Salir sin guardar</a>
                     </div>
                 </div>
             </div>
