--- a/Vostok/inventario/templates/inventario/editar_inventario.html
+++ b/Vostok/inventario/templates/inventario/editar_inventario.html
@@ -38,7 +38,7 @@
                                         </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
+                                        <button class="btn btn-success waves-effect waves-light" type="submit">Aceptar</button>
                                     </div>
                                 </div>
                             </form>
