--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -1,6 +1,7 @@
 {% extends 'dashboard/base.html' %}
 {% load staticfiles %}
 {% block content %}
+
     <div class="container-fluid">
         <h1>Unidad</h1>
         {% if messages %}
@@ -28,7 +29,7 @@
             <br>
             <table class="table table-hover table-dark" id="Ambulancias">
                 <thead>
-                <tr>
+                <tr >
                     <th>Nombre</th>
                     <th>Equipo</th>
 
@@ -38,14 +39,18 @@
                 {% if user.is_adminplus %}
                     <th>Revisiones</th>
                 {% endif %}
+                {% if user.is_adminplus %}
                     <th>Estado de Unidad</th>
+                {% endif %}
+                {% if user.is_adminplus %}
+                    <th>Historial de Viajes</th>
                 {% endif %}
                 {% if user.is_adminplus %}
                     <th>Eliminar</th>
                 {% endif %}
                 </tr>
                 </thead>
-                <tbody>
+                <tbody >
                 {% for ambulancia in Ambulancias %}
                         <tr>
                             <td>{{ ambulancia.nombre }}</td>
@@ -64,6 +69,7 @@
                                 </button>
                             </a></td>
                         {% endif %}
+                        {% if user.is_adminplus %}
                             <td><a href="{% url "revision:revisiones_ambulancia"  id=ambulancia.id %}"
                                    data-animation="blur" data-overlaycolor="#36404a">
                                 <button type="button" class=" btn btn-info"><i class="fas fa-ambulance"></i>
@@ -122,6 +128,7 @@
 
         </div>
     </div>
+
     <script>
         function Filter() {
             var input, filter, table, tr, td, i, txtValue;
