--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -97,7 +97,7 @@
                     <form action="#" data-parsley-validate="" novalidate="">
                         <div class="form-group text-right mb-0">
                             <button class="btn btn-danger waves-effect waves-light mr-1" type="submit">
-                                <a href="{% url "inventario:delete_inventario" Inventario.id %}">Eliminar</a>
+                                <a style="color:whitesmoke;" href="{% url "inventario:delete_inventario" Inventario.id %}">Eliminar</a>
                             </button>
                             <button type="reset" class="btn btn-secondary waves-effect waves-light"
                                     onclick="Custombox.modal.close();">
