--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -109,7 +109,7 @@
                     <div class="form-group text-right mb-0">
                         <button class="btn btn-danger waves-effect waves-light mr-1"
                                 type="submit">
-                            <a href="{% url 'material:delete_material' material.id %}">Eliminar</a>
+                            <a style="color:whitesmoke;" href="{% url 'material:delete_material' material.id %}">Eliminar</a>
                         </button>
                         <button type="reset"
                                 class="btn btn-secondary waves-effect waves-light"
