--- a/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
@@ -67,7 +67,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <p>Se han guardado los cambios en la ambulancia</p>
+                            <p>Se han guardado los cambios en la unidad</p>
                         </div>
                         <div class="modal-footer">
                             <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-success">De acuerdo</a>
