--- a/Vostok/inventario/templates/inventario/crear_inventario.html
+++ b/Vostok/inventario/templates/inventario/crear_inventario.html
@@ -79,7 +79,7 @@
                             <p>Se ha creado un equipo nuevo</p>
                         </div>
                         <div class="modal-footer">
-                            <a href="/inventario/ver/" class="btn btn-success">De acuerdo</a>
+                            <a href="/inventario/ver/" class="btn btn-success">Aceptar</a>
                         </div>
                     </div>
                 </div>
