--- a/Vostok/inventario/templates/inventario/editar_inventario.html
+++ b/Vostok/inventario/templates/inventario/editar_inventario.html
@@ -38,7 +38,7 @@
                                         </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
+                                        <button class="btn btn-success waves-effect waves-light" type="submit">Guardar</button>
                                     </div>
                                 </div>
                             </form>
@@ -69,7 +69,7 @@
                             <p>Se han guardado los cambios en el inventario</p>
                         </div>
                         <div class="modal-footer">
-                            <a href="{% url 'inventario:ver_inventario' %}" class="btn btn-success">De acuerdo</a>
+                            <a href="{% url 'inventario:ver_inventario' %}" class="btn btn-success">Aceptar</a>
                         </div>
                     </div>
                 </div>
