--- a/Vostok/material/templates/material/crear_material.html
+++ b/Vostok/material/templates/material/crear_material.html
@@ -59,7 +59,7 @@
                             <p>Se ha creado el material nuevo {{ material_name }}</p>
                         </div>
                         <div class="modal-footer">
-                            <a href="/material/ver/" class="btn btn-success">De acuerdo</a>
+                            <a href="/material/ver/" class="btn btn-success">Aceptar</a>
                         </div>
                     </div>
                 </div>
