--- a/Vostok/material/templates/material/editar_material.html
+++ b/Vostok/material/templates/material/editar_material.html
@@ -69,7 +69,7 @@
                             <p>Se han guardado los cambios en el material</p>
                         </div>
                         <div class="modal-footer">
-                            <a href="{% url 'material:ver_material' %}" class="btn btn-success">De acuerdo</a>
+                            <a href="{% url 'material:ver_material' %}" class="btn btn-success">Aceptar</a>
                         </div>
                     </div>
                 </div>
