--- a/Vostok/users/templates/users/ver_usuarios.html
+++ b/Vostok/users/templates/users/ver_usuarios.html
@@ -102,7 +102,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 </div>
                 <div class="modal-body">
-                    <h4>Anónimo</h4>
+                    <h4>Usuario Desactivado</h4>
                     <p>
                         No tiene acceso a ninguna funcionalidad del sistema.
                         <br>
