--- a/Vostok/inventario/templates/inventario/agregar_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/agregar_material_inventario.html
@@ -61,7 +61,9 @@
                                 a {{ nombre_inventario }}</p>
                         </div>
                         <div class="modal-footer">
-                            <a href="{% url 'inventario:material_inventario' id_inventario %}"><button class="btn btn-success">De acuerdo</button></a>
+                            <a href="{% url 'inventario:material_inventario' id_inventario %}">
+                                <button class="btn btn-success">Aceptar</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +84,7 @@
                         </div>
                         <div class="modal-footer">
                             <a href="{% url 'inventario:material_inventario' id_inventario %}">
-                                <button class="btn btn-success">De acuerdo</button>
+                                <button class="btn btn-success">Aceptar</button>
                             </a>
                         </div>
                     </div>
@@ -102,14 +104,18 @@
                     <div class="modal-body">
                         <p>Si sales ahora no se guardará el material nuevo</p>
                     </div>
-                    <div class="modal-footer">
-                        <a href="{% url 'inventario:material_inventario' id_inventario %}">
-                            <button class="btn btn-primary">Salir sin guardar</button>
-                        </a>
-                        <a href="{% url 'inventario:material_inventario' id_inventario %}">
-                            <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando
-                            </button>
-                        </a>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <a href="{% url 'inventario:material_inventario' id_inventario %}">
+                                <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col-md-2">
+                            <a href="{% url 'inventario:material_inventario' id_inventario %}">
+                                <button class="btn btn-primary">Salir sin guardar</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
