--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -10,8 +10,8 @@
             <h1><i class="zmdi zmdi-shape"> </i>Equipos </h1>
 
             <div class="row">
-                 <div id="datatable_filter" class="col"><label>Buscar:<input
-                            type="search" class="form-control form-control-sm" placeholder="Buscar equipo..."
+                 <div id="datatable_filter" class="col"><label>Buscar equipo:<input
+                            type="search" class="form-control form-control-sm" placeholder="Escribe el equipo"
                             aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             <div class="col" align="right">
