--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -6,15 +6,15 @@
     <!--  Template US-5  -->
     <div class="container-fluid">
 
-            <br>
+        <br>
 
-            <div class="row">
-                <div class="col-sm">
+        <div class="row">
+            <div class="col-sm">
 
-                    <h1><i class="zmdi zmdi-shape"> </i>Equipo {{ nombre_inventario }} </h1>
+                <h1><i class="zmdi zmdi-shape"> </i>Equipo {{ nombre_inventario }} </h1>
 
-                </div>
-                {% if user.is_administrador or user.is_adminplus %}
+            </div>
+            {% if user.is_administrador or user.is_adminplus %}
                 <div class="col-sm">
                     <div class="nav justify-content-end">
                         <a href="{% url 'inventario:agregar_material_inventario' inventario_pk %}">
@@ -26,61 +26,60 @@
                     </div>
 
                 </div>
-                {% endif %}
-            </div>
-
-            <a href="{% url 'inventario:ver_inventario' %}">
-                <button class="btn btn-dark" type="button" data-toggle="modal"
-                        data-target="#modalCancel"><i
-                        class="fas fa-arrow-left"></i></button>
-            </a>
-             <br><br>
-            <div id="datatable_filter" class="col"><label>Buscar:<input
-                    type="search" class="form-control form-control-sm" placeholder="Buscar Material..."
-                    aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
-
-
-            {% if messages %}
-                <ul class="messages">
-                    {% for message in messages %}
-                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                </ul>
             {% endif %}
+        </div>
 
-            <table class="table table-hover table-dark" id="MaterialInventario">
-                <thead>
-                <tr>
-                    <th scope="col">Material</th>
-                    <th scope="col">Cantidad</th>
-                    {% if user.is_administrador or user.is_adminplus %}
-{#                    <th scope="col">Editar Cantidad</th>#}
+        <a href="{% url 'inventario:ver_inventario' %}">
+            <button class="btn btn-dark" type="button" data-toggle="modal"
+                    data-target="#modalCancel"><i
+                    class="fas fa-arrow-left"></i></button>
+        </a>
+        <br><br>
+        <div id="datatable_filter"><label>Buscar Material:<input
+                type="search" class="form-control form-control-sm" placeholder="Escribe el material"
+                aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
+        <br>
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
+        <table class="table table-hover table-dark" id="MaterialInventario">
+            <thead>
+            <tr>
+                <th scope="col">Material</th>
+                <th scope="col">Cantidad</th>
+                {% if user.is_administrador or user.is_adminplus %}
+                    {#                    <th scope="col">Editar Cantidad</th>#}
                     <th scope="col">Eliminar</th>
-                    {% endif %}
+                {% endif %}
 
-                </tr>
+            </tr>
             </thead>
             <tbody>
 
-                {% for material in inventarios %}
+            {% for material in inventarios %}
 
-                    <tr>
-                        <td scope="row">{{ material.material.nombre }}</td>
-                        <td>{{ material.cantidad }}</td>
+                <tr>
+                    <td scope="row">{{ material.material.nombre }}</td>
+                    <td>{{ material.cantidad }}</td>
 
-                        {% if user.is_administrador or user.is_adminplus %}
-{#                        <td><a href="#editar-modal-{{ material.material }}" class="dropdown-item"#}
-{#                               data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">#}
-{#                            <button class="btn btn-success"><i class="fas fa-edit"></i></button>#}
-{#                        </a></td>#}
+                    {% if user.is_administrador or user.is_adminplus %}
+                        {#                        <td><a href="#editar-modal-{{ material.material }}" class="dropdown-item"#}
+                        {#                               data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">#}
+                        {#                            <button class="btn btn-success"><i class="fas fa-edit"></i></button>#}
+                        {#                        </a></td>#}
                         <td>
                             <button type="button" class="btn btn-danger" data-toggle="modal"
                                     data-target="#modalConfirmacion"><i class="fas fa-trash"></i></button>
                         </td>
                     {% endif %}
-                    </tr>
+                </tr>
 
-                    {% if user.is_administrador or user.is_adminplus %}
+                {% if user.is_administrador or user.is_adminplus %}
                     <div class="modal fade" id="modalConfirmacion" tabindex="-1" role="dialog"
                          aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
@@ -95,22 +94,22 @@
                                     ¿Estas seguro que deseas eliminar el material?
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar
+                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar
                                     </button>
                                     <a href="{% url 'inventario:eliminar_material_inventario' inventario_pk material.id %}">
-                                        <button type="button" class="btn btn-primary">Aceptar</button>
+                                        <button type="button" class="btn btn-success">Aceptar</button>
                                     </a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    {% endif %}
+                {% endif %}
 
-                {% endfor %}
-                <!--  Template US-5  -->
+            {% endfor %}
+            <!--  Template US-5  -->
 
 
-                {% if user.is_administrador or user.is_adminplus %}
+            {% if user.is_administrador or user.is_adminplus %}
                 {% for material in inventarios %}
                     <!-- US02 -->
 
@@ -140,31 +139,31 @@
                         </div>
                     </div>
                 {% endfor %}
-                {% endif %}
+            {% endif %}
 
             </tbody>
-            </table>
-            <script>
-                function Filter() {
-                    var input, filter, table, tr, td, i, txtValue;
-                    input = document.getElementById("myInput");
-                    filter = input.value.toUpperCase();
-                    table = document.getElementById("MaterialInventario");
-                    tr = table.getElementsByTagName("tr");
-                    for (i = 0; i < tr.length; i++) {
-                        td = tr[i].getElementsByTagName("td")[0];
-                        if (td) {
-                            txtValue = td.textContent || td.innerText;
-                            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                                tr[i].style.display = "";
-                            } else {
-                                tr[i].style.display = "none";
-                            }
+        </table>
+        <script>
+            function Filter() {
+                var input, filter, table, tr, td, i, txtValue;
+                input = document.getElementById("myInput");
+                filter = input.value.toUpperCase();
+                table = document.getElementById("MaterialInventario");
+                tr = table.getElementsByTagName("tr");
+                for (i = 0; i < tr.length; i++) {
+                    td = tr[i].getElementsByTagName("td")[0];
+                    if (td) {
+                        txtValue = td.textContent || td.innerText;
+                        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                            tr[i].style.display = "";
+                        } else {
+                            tr[i].style.display = "none";
                         }
                     }
                 }
+            }
 
-            </script>
+        </script>
 
 
 {% endblock %}
