--- a/Vostok/revision/templates/revision/reportes.html
+++ b/Vostok/revision/templates/revision/reportes.html
@@ -11,11 +11,11 @@
         <br>
         <div class="row">
         </div>
-        <div class="card-box">
+
         <br>
     <div class="row">
-            <div id="datatable_filter" class="col"><label>Buscar:<input
-                    type="search" class="form-control form-control-sm" placeholder="Buscar Material"
+            <div id="datatable_filter" class="col"><label>Buscar Material:<input
+                    type="search" class="form-control form-control-sm" placeholder="Escriba el Material"
                     aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
         </div>
         <br>
@@ -104,7 +104,7 @@
 </tbody>
 </table>
 </div>
-    </div>
+
     <!--######## VIEW US41 ########-->
 <script>
         function Filter() {
