--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -98,9 +98,9 @@
                 <span>×</span><span class="sr-only">Close</span>
             </button>
             <h4 class="custom-modal-title">Eliminar el material
-                <span>{{ material.nombre }}</span>?</h4>
+                <span>{{ material.nombre }}</span></h4>
             <div class="custom-modal-text">
-                Quieres eliminar el material {{ material.nombre }} permanentemente?
+                ¿Quieres eliminar el material {{ material.nombre }} permanentemente?
                 <form action="#" data-parsley-validate="" novalidate="">
                     <div class="form-group text-right mb-0">
                         <button class="btn btn-danger waves-effect waves-light mr-1"
