corregir consistencia de los modales

--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -96,8 +96,8 @@
                                     </button>
 
                                     <div class="modal-body">
-                                        <p>¿Estas seguro que quieres eliminar la
-                                            unidad {{ ambulancia.nombre }}?</p>
+                                        <p>¿Estas seguro de que quieres eliminar la
+                                            unidad {{ ambulancia.nombre }} permanentemente?</p>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
