--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -63,15 +63,18 @@
                             <button class="btn btn-success"><i class="fas fa-edit"></i>
                             </button>
                         </a></td>
-                        <td><a href="#delete-modal-{{ Inventario.id }}"
+                        <td>
+                            <a href="#delete-modal-{{ Inventario.id }}"
                                data-animation="blur"
                                data-plugin="custommodal"
                                data-overlaycolor="#36404a">
                             <button type="button" class="btn btn-danger"
                                     data-toggle="modal"
                                     data-target="#modalConfirmacion"><i
-                                    class="fas fa-trash"></i></button>
-                        </a></td>
+                                    class="fas fa-trash"></i>
+                            </button>
+                            </a>
+                        </td>
                         {% endif %}
 
 
@@ -93,7 +96,7 @@
                 </button>
                 <h4 class="custom-modal-title">Confirmación</h4>
                 <div class="custom-modal-text">
-                    ¿Quieres eliminar el equipo {{ Inventario.nombre }} permanentemente?
+                    ¿Estás seguro de que quieres eliminar el inventario{{ Inventario.nombre }} permanentemente?
                     <form action="#" data-parsley-validate="" novalidate="">
                         <div class="form-group text-right mb-0">
                             <button class="btn btn-danger waves-effect waves-light mr-1" type="submit">
