--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -67,80 +67,52 @@
                     <td scope="row">{{ material.material.nombre }}</td>
                     <td>{{ material.cantidad }}</td>
 
-                    {% if user.is_administrador or user.is_adminplus %}
+                    {% if user.is_adminplus %}
                         {#                        <td><a href="#editar-modal-{{ material.material }}" class="dropdown-item"#}
                         {#                               data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">#}
                         {#                            <button class="btn btn-success"><i class="fas fa-edit"></i></button>#}
                         {#                        </a></td>#}
                         <td>
-                            <button type="button" class="btn btn-danger" data-toggle="modal"
-                                    data-target="#modalConfirmacion"><i class="fas fa-trash"></i></button>
+                            <a href="#delete-modal-{{ material.id }}"
+                               data-animation="blur"
+                               data-plugin="custommodal"
+                               data-overlaycolor="#36404a">
+                            <button type="button" class="btn btn-danger"
+                                    data-toggle="modal"
+                                    data-target="#modalConfirmacion"><i
+                                    class="fas fa-trash"></i>
+                            </button>
+                            </a>
                         </td>
                     {% endif %}
                 </tr>
 
                 {% if user.is_administrador or user.is_adminplus %}
-                    <div class="modal fade" id="modalConfirmacion" tabindex="-1" role="dialog"
-                         aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Confirmación</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
+
+                    <div id="delete-modal-{{ material.id }}" class="modal-demo">
+                        <button type="button" class="close" onclick="Custombox.modal.close();">
+                            <span>×</span><span class="sr-only">Close</span>
+                        </button>
+                        <h4 class="custom-modal-title">Confirmación</h4>
+                        <div class="custom-modal-text">
+                            ¿Estás seguro de que quieres eliminar el material {{ material.nombre }} del inventario {{ nombre_inventario }}permanentemente?
+                            <form action="#" data-parsley-validate="" novalidate="">
+                                <div class="form-group text-right mb-0">
+                                    <button class="btn btn-danger waves-effect waves-light mr-1" type="submit">
+                                        <a style="color:whitesmoke;" href="{% url 'inventario:eliminar_material_inventario' inventario_pk material.id %}">Eliminar</a>
+                                    </button>
+                                    <button type="reset" class="btn btn-secondary waves-effect waves-light"
+                                            onclick="Custombox.modal.close();">
+                                        Cancelar
                                     </button>
                                 </div>
-                                <div class="modal-body">
-                                    ¿Estas seguro que deseas eliminar el material?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar
-                                    </button>
-                                    <a href="{% url 'inventario:eliminar_material_inventario' inventario_pk material.id %}">
-                                        <button type="button" class="btn btn-success">Aceptar</button>
-                                    </a>
-                                </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
                 {% endif %}
 
             {% endfor %}
             <!--  Template US-5  -->
-
-
-            {% if user.is_administrador or user.is_adminplus %}
-                {% for material in inventarios %}
-                    <!-- US02 -->
-
-                    <div id="editar-modal-{{ material.material }}" class="modal-demo">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <h4 class="custom-modal-title" id="titulo_inventario">Estas editando el
-                                    material {{ material.material }}</h4>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"
-                                        onclick="Custombox.modal.close();">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                                <form method="post"
-                                      action="{% url "inventario:editar_cantidad_material"  inventario_id=inventario_pk material_id=material.material.id %}">
-                                    {% csrf_token %}
-                                    <div class="modal-body">
-                                        {{ form.as_p }}
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary"
-                                                    onclick="Custombox.modal.close();">Cancelar
-                                            </button>
-                                            <button type="submit" class="btn btn-primary">Guardar</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            {% endif %}
-
             </tbody>
         </table>
         <script>
