--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -67,9 +67,7 @@
                                data-animation="blur"
                                data-plugin="custommodal"
                                data-overlaycolor="#36404a">
-                            <button type="button" class="btn btn-danger"
-                                    data-toggle="modal"
-                                    data-target="#modalConfirmacion"><i
+                            <button type="button" class="btn btn-danger"git><i
                                     class="fas fa-trash"></i></button>
                         </a></td>
                         {% endif %}
