--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -18,15 +18,15 @@
             </div>
 
             {% if user.is_adminplus %}
-            <div class="col">
-                <br>
-                <a href="{% url 'material:crear' %}">
-                    <button type="button"
-                            class="btn btn-bordred-success waves-effect  width-md waves-light"><i
-                            class="fas fa-plus"></i> Agregar Material
-                    </button>
-                </a>
-            </div>
+                <div class="col">
+                    <br>
+                    <a href="{% url 'material:crear' %}">
+                        <button type="button"
+                                class="btn btn-bordred-success waves-effect  width-md waves-light"><i
+                                class="fas fa-plus"></i> Agregar Material
+                        </button>
+                    </a>
+                </div>
             {% endif %}
 
         </div>
@@ -50,13 +50,13 @@
                     Cantidad Ideal
                 </th>
                 {% if user.is_administrador or user.is_adminplus %}
-                <th scope="col">
-                    Editar material
-                </th>
-                <th scope="col">
-                    Eliminar
-                </th>
-        {% endif %}
+                    <th scope="col">
+                        Editar material
+                    </th>
+                    <th scope="col">
+                        Eliminar
+                    </th>
+                {% endif %}
             </thead>
 
 
@@ -68,21 +68,21 @@
                     <td>{{ material.descripcion }}</td>
                     <td>{{ material.cantidad }}</td>
                     {% if  user.is_adminplus %}
-                    <td><a
-                            href="{% url 'material:editar_material' material.id %}">
-                        <button class="btn btn-success"><i class="fas fa-edit"></i>
-                        </button>
-                    </a></td>
-                    <td><a href="#delete-modal-{{ material.id }}"
-                           data-animation="blur"
-                           data-plugin="custommodal"
-                           data-overlaycolor="#36404a">
-                        <button type="button" class="btn btn-danger"
-                                data-toggle="modal"
-                                data-target="#modalConfirmacion"><i
-                                class="fas fa-trash"></i></button>
-                    </a></td>
-                {% endif %}
+                        <td><a
+                                href="{% url 'material:editar_material' material.id %}">
+                            <button class="btn btn-success"><i class="fas fa-edit"></i>
+                            </button>
+                        </a></td>
+                        <td><a href="#delete-modal-{{ material.id }}"
+                               data-animation="blur"
+                               data-plugin="custommodal"
+                               data-overlaycolor="#36404a">
+                            <button type="button" class="btn btn-danger"
+                                    data-toggle="modal"
+                                    data-target="#modalConfirmacion"><i
+                                    class="fas fa-trash"></i></button>
+                        </a></td>
+                    {% endif %}
                 </tr>
             {% endfor %}
             </tbody>
@@ -100,19 +100,16 @@
             <h4 class="custom-modal-title">Confirmación</h4>
             <div class="custom-modal-text">
                 ¿Estás seguro de que quieres eliminar el material {{ material.nombre }} permanentemente?
-                <form action="#" data-parsley-validate="" novalidate="">
-                    <div class="form-group text-right mb-0">
-                        <button class="btn btn-danger waves-effect waves-light mr-1"
-                                type="submit">
-                            <a style="color:whitesmoke;" href="{% url 'material:delete_material' material.id %}">Eliminar</a>
-                        </button>
-                        <button type="reset"
-                                class="btn btn-secondary waves-effect waves-light"
-                                onclick="Custombox.modal.close();">
-                            Cancelar
-                        </button>
-                    </div>
-                </form>
+                <div class="form-group text-right mb-0">
+                    <button type="reset"
+                            class="btn btn-secondary waves-effect waves-light"
+                            onclick="Custombox.modal.close();">
+                        Cancelar
+                    </button>
+                    <a class="btn btn-danger waves-effect waves-light mr-1"
+                       href="{% url 'material:delete_material' material.id %}">Eliminar</a>
+
+                </div>
             </div>
         </div>
 
