arreglar forma crear inventario, arreglar titulo de ambulancia  e inventario

--- a/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col text-center m-3">
-            <h1>Crear Unidad</h1>
+            <h1>Agregar nueva unidad</h1>
         </div>
     </div>
     <div class="container-fluid">
