Cambiar Ver Detalle por Ver material

--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -31,7 +31,7 @@
                 <thead>
                 <tr align="center">
                     <th scope="col">Nombre</th>
-                    <th scope="col">Ver Detalle</th>
+                    <th scope="col">Ver Materiales</th>
                     {% if user.is_adminplus %}
                         <th scope="col">Editar nombre</th>
 
