arreglar labels de todos los buscadores corregir texto de botón de agregar material corregir orden de botones de cancelar edición de unidad cambiar ver detalle a ver materiales en ver inventario en agregar material a ambulancia cantidad ahora dice cantidad actualmente en ambulancia agregar espacio a modal de guardar material cambiar nombre de columna de editar en ver ambulancia cambiar column a la que apunta el buscador de revisiones de ambulancia de encargado a fecha

--- a/Vostok/revision/templates/revision/reportes.html
+++ b/Vostok/revision/templates/revision/reportes.html
@@ -14,8 +14,8 @@
 
         <br>
     <div class="row">
-            <div id="datatable_filter" class="col"><label>Buscar Material:<input
-                    type="search" class="form-control form-control-sm" placeholder="Escriba el Material"
+            <div id="datatable_filter" class="col"><label>Buscar:<input
+                    type="search" class="form-control form-control-sm" placeholder="Nombre del material"
                     aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
         </div>
         <br>
