--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -6,7 +6,7 @@
         <h1>Unidad</h1>
         <div class="row">
             <div id="datatable_filter" class="col"><label>Buscar:<input
-                    type="search" class="form-control form-control-sm" placeholder="Buscar Unidad..."
+                    type="search" class="form-control form-control-sm" placeholder="Nombre de la unidad"
                     aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             {% if user.is_adminplus %}
@@ -33,7 +33,7 @@
                         <th>Estado de Unidad</th>
                     {% endif %}
                     {% if user.is_adminplus %}
-                        <th>Editar nombre</th>
+                        <th>Editar</th>
                     {% endif %}
                     {% if user.is_adminplus %}
                         <th>Eliminar</th>
