--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -10,8 +10,8 @@
             <h1><i class="zmdi zmdi-shape"> </i>Equipos </h1>
 
             <div class="row">
-                <div id="datatable_filter" class="col"><label>Buscar equipo:<input
-                        type="search" class="form-control form-control-sm" placeholder="Escribe el equipo"
+                <div id="datatable_filter" class="col"><label>Buscar:<input
+                        type="search" class="form-control form-control-sm" placeholder="Nombre del material"
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
                 <div class="col" align="right">
@@ -19,7 +19,7 @@
                     {% if user.is_adminplus %}
                         <a href="{% url 'inventario:crear_inventario' %}">
                             <button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light"><i
-                                    class="fas fa-plus"></i> Agregar Equipo
+                                    class="fas fa-plus"></i> Agregar equipo
                             </button>
                         </a>
                     {% endif %}
@@ -31,7 +31,7 @@
                 <thead>
                 <tr align="center">
                     <th scope="col">Nombre</th>
-                    <th scope="col">Ver Detalle</th>
+                    <th scope="col">Ver materiales</th>
                     {% if user.is_adminplus %}
                         <th scope="col">Editar nombre</th>
 
