--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -35,8 +35,8 @@
                     class="fas fa-arrow-left"></i></button>
         </a>
         <br><br>
-        <div id="datatable_filter"><label>Buscar Material:<input
-                type="search" class="form-control form-control-sm" placeholder="Escribe el material"
+        <div id="datatable_filter"><label>Buscar:<input
+                type="search" class="form-control form-control-sm" placeholder="Nombre del material"
                 aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
         <br>
 
@@ -89,7 +89,7 @@
                         <h4 class="custom-modal-title">Confirmación</h4>
                         <div class="custom-modal-text">
                             ¿Estás seguro de que quieres eliminar el material {{ material.nombre }} del
-                            inventario {{ nombre_inventario }}permanentemente?
+                            inventario {{ nombre_inventario }} permanentemente?
                             <div class="form-group text-right mb-0">
 
 
