--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -11,8 +11,8 @@
         <div class="row">
             <div class="col-10">
 
-                <div id="datatable_filter" class="dataTables_filter"><label>Buscar Material:<input
-                        type="search" class="form-control form-control-sm" placeholder="Escribe el material"
+                <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
+                        type="search" class="form-control form-control-sm" placeholder="Nombre del material"
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             </div>
@@ -23,7 +23,7 @@
                     <a href="{% url 'material:crear' %}">
                         <button type="button"
                                 class="btn btn-bordred-success waves-effect  width-md waves-light"><i
-                                class="fas fa-plus"></i> Agregar Material
+                                class="fas fa-plus"></i> Agregar material
                         </button>
                     </a>
                 </div>
