--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -18,7 +18,7 @@
                 <div class="col-10">
 
                 <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
-                        type="search" class="form-control form-control-sm" placeholder="Buscar Fecha..."
+                        type="search" class="form-control form-control-sm" placeholder="Fecha de la revisión"
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             </div>
