--- a/Vostok/users/templates/users/ver_usuarios.html
+++ b/Vostok/users/templates/users/ver_usuarios.html
@@ -12,7 +12,7 @@
             <div class="col-8">
 
                 <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
-                        type="search" class="form-control form-control-sm" placeholder="Email, rol o turno..."
+                        type="search" class="form-control form-control-sm" placeholder="Email, rol o turno"
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
             </div>
             <div class="col-4">
