quitar validación de html en las formas de editary agregar material a inventario poner colores de hover a las tablas de lista de revisiones de inventario y estado de ambulancia, poner colores de hover a las tablas de detalle de revisiones de inventario y estado de ambulancia arreglar títulos de lista y detalle de ambostipos de revisión de ambulanci cambiar texto de modal de cancelación de creación de ambulancia arreglar falta de ortogrfiía en revisiones de inventario de ambulancia arreglar botones de ver detalle en lista de revisiones de inventario y estado hacer que el formato de las listas de revisiones y estado concuerden con el del resto del sistema

--- a/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
@@ -80,7 +80,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <p>¿Desea salir sin guardar los cambios?</p>
+                        <p>Si sales ahora no se guardará la unidad nueva</p>
                     </div>
                     <div class="modal-footer">
                         <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-primary">Salir sin guardar</a>
