--- a/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card-box">
-                            <form method="post">
+                            <form method="post" novalidate>
                                 {% csrf_token %}
                                 {{ form.as_p }}
                                 <div class="row">
@@ -53,7 +53,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <p>Si sales ahora no se guardarán los cambios de la unidad</p>
+                        <p>Si sales ahora no se guardarán los cambios en la unidad</p>
                     </div>
                     <div class="modal-footer">
                         <a href="/ambulancia/ver/" class="btn btn-primary">Salir sin guardar</a>
