--- a/Vostok/inventario/templates/inventario/agregar_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/agregar_material_inventario.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card-box">
-                            <form method="POST">
+                            <form method="POST" novalidate>
                                 {% csrf_token %}
                                 {{ form.as_p }}
                                 <div class="row">
@@ -40,7 +40,7 @@
                                                 data-target="#modalCancel">Cancelar
                                         </button>
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-md-2 offset-md-8">
                                         <button class="btn btn-success waves-effect waves-light" type="submit">Guardar
                                         </button>
                                     </div>
