--- a/Vostok/inventario/templates/inventario/editar_inventario.html
+++ b/Vostok/inventario/templates/inventario/editar_inventario.html
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card-box">
-                            <form method="post">
+                            <form method="post" novalidate>
                                 {% csrf_token %}
                                 {{ form.as_p }}
                                 <div class="row">
