--- a/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
@@ -3,36 +3,36 @@
 {% block content %}
     <!--######## VIEW US30 ########-->
 
-     <h2>Revisión de la unidad {{ ambulancia.nombre }}</h2>
-      <a href="{% url "revision:revisiones_ambulancia"  id=ambulancia.id %}">
-                <button class="btn btn-dark" type="button" data-toggle="modal"
-                        data-target="#modalCancel"><i
-                        class="fas fa-arrow-left"></i></button>
-            </a>
+    <h2>Detalle de revisión de estado de la unidad</h2>
+    <a href="{% url "revision:revisiones_ambulancia"  id=ambulancia.id %}">
+        <button class="btn btn-dark" type="button" data-toggle="modal"
+                data-target="#modalCancel"><i
+                class="fas fa-arrow-left"></i></button>
+    </a>
     <br>
     {% if  revision %}
-
-        <br>
-        <div class="table-responsive">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Ambulancia: {{ ambulancia.nombre }}</li>
-                <li class="list-group-item">Responsable: {{ revision.usuario.first_name }} {{ revision.usuario.last_name }}</li>
-                <li class="list-group-item">Guardia: {{ revision.usuario.get_turno_display }}</li>
-                <li class="list-group-item">Fecha: {{ revision.fecha }}</li>
-                <li class="list-group-item">Observaciones: <p>{{ revision.observaciones }}</p></li>
-            </ul>
-        </div>
-        <br><br>
-        <div class="table-responsive">
-            <table class="table table-dark mb-0">
-                <thead align="center">
+        <div class="card-box">
+            <div class="table-responsive">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Ambulancia: {{ ambulancia.nombre }}</li>
+                    <li class="list-group-item">
+                        Responsable: {{ revision.usuario.first_name }} {{ revision.usuario.last_name }}</li>
+                    <li class="list-group-item">Guardia: {{ revision.usuario.get_turno_display }}</li>
+                    <li class="list-group-item">Fecha: {{ revision.fecha }}</li>
+                    <li class="list-group-item">Observaciones: <p>{{ revision.observaciones }}</p></li>
+                </ul>
+            </div>
+            <br><br>
+            <div class="table-responsive">
+                <table class="table table-hover table-dark mb-0">
+                    <thead align="center">
                     <tr>
                         <th>Componente</th>
                         <th>Esperado</th>
                         <th>Actual</th>
                     </tr>
-                </thead>
-                <tbody align="center">
+                    </thead>
+                    <tbody align="center">
                     <tr>
                         <td>Gasolina</td>
                         <td>{{ ambulancia.objetivo_gasolina }}</td>
@@ -40,7 +40,7 @@
                     </tr>
                     <tr>
                         <td>Líquido de frenos</td>
-                        <td>{{ ambulancia.objetivo_liquido_frenos}}</td>
+                        <td>{{ ambulancia.objetivo_liquido_frenos }}</td>
                         <td>{{ revision.liquido_frenos }}</td>
                     </tr>
                     <tr>
@@ -68,10 +68,10 @@
                         <td>{{ ambulancia.objetivo_liquido_limpiaparabrisas }}</td>
                         <td>{{ revision.liquido_limpiaparabrisas }}</td>
                     </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
-
     {% else %}
         <div class="account-pages mt-5 mb-5">
         <div class="container">
