corregir falta de ortografía de lista de revisiones de ambulancia

--- a/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
@@ -24,7 +24,7 @@
                 <thead>
                 <tr>
 
-                    <th>Fecha de Revision</th>
+                    <th>Fecha de Revisión</th>
                     <th>Encargado</th>
                     <th>Guardia</th>
                     <th>Ver detalle</th>
