poner en plural unidades y equipos, arreglar order by de revisiones

--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -152,14 +152,14 @@ Head
                         <li>
                             <a href="{% url 'inventario:ver_inventario' %}">
                                 <i class="mdi mdi-database"></i>
-                                <span> Equipo </span>
+                                <span> Equipos </span>
                             </a>
                         </li>
 
                         <li>
                             <a href="{% url 'ambulancia:ver_ambulancias' %}">
                                 <i class="mdi mdi-ambulance"></i>
-                                <span> Unidad </span>
+                                <span> Unidades </span>
                             </a>
                         </li>
                         <li>
