--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="container-fluid">
-        <h1>Unidad</h1>
+        <h1>Unidades</h1>
         <div class="row">
             <div id="datatable_filter" class="col"><label>Buscar:<input
                     type="search" class="form-control form-control-sm" placeholder="Nombre de la unidad"
